# team-reports

./: .gitignore  CONFIGURATION_GUIDE.md  DEVELOPER_GUIDE.md  GITHUB_QUARTERLY_README.md  LIBRARY_USAGE.md  LICENSE  MIGRATION_GUIDE.md  README.md  REFACTOR_STATUS.md  REFACTOR_SUMMARY.md  ROADMAP.md  TEST_RESULTS.md  WEEKLY_SUMMARY_README.md  date_utils.py  engineer_quarterly_performance.py  env.template  github_quarterly_summary.py  github_weekly_summary.py  jira_config_example.yaml  jira_quarterly_summary.py  jira_weekly_summary.py  pyproject.toml  quarterly_team_summary.py  report_utils.py  requirements.txt  run_batch_weekly.sh  run_engineer_quarterly_performance.sh  run_github_quarterly_summary.sh  run_github_weekly_summary.sh  run_gitlab_quarterly_summary.sh  run_jira_quarterly_summary.sh  run_jira_weekly_summary.sh  run_quarterly_summary.sh  team_config_example.yaml  ticket_utils.py  weekly_team_summary.py
config/: default_config.yaml  github_config_example.yaml  gitlab_config_example.yaml  jira_config_example.yaml  team_config.yaml  team_config_example.yaml
docs/: FLOW_METRICS_BUILD_PLAN.md  FLOW_METRICS_CYCLE_TIME.md  FLOW_METRICS_REPORT_PLAN.md
team_reports/: __init__.py
team_reports/cli/: __init__.py  main.py
team_reports/engine/: __init__.py  api.py  collect.py  dataset_writer.py  identity.py  ids.py  models.py  normalize.py  preview.py  state.py  time_rules.py
team_reports/reports/: __init__.py  engineer_performance.py  flow_metrics_history.py  github_quarterly.py  github_weekly.py  jira_weekly.py  (+4 more)
tests/: __init__.py
utils/: __init__.py  config.py  date.py  engineer_performance.py  github.py  github_client.py  github_summary_base.py  jira.py  jira_client.py  jira_summary_base.py  report.py  ticket.py
(+43 files in other folders)
